--- a/DependencyViewer/MainFrom.resx
+++ b/DependencyViewer/MainFrom.resx
@@ -117,20 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="cmGraph.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <data name="graphViewer.Transform" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFJNaWNyb3NvZnQuTXNhZ2wsIFZlcnNpb249My4wLjAuMCwgQ3Vs
-        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj02NDBjNTdhYTQwZTdhZTdkBQEAAAA4TWljcm9zb2Z0
-        Lk1zYWdsLkNvcmUuR2VvbWV0cnkuQ3VydmVzLlBsYW5lVHJhbnNmb3JtYXRpb24BAAAACGVsZW1lbnRz
-        AxFTeXN0ZW0uRG91YmxlW11bXQIAAAAJAwAAAAcDAAAAAQEAAAACAAAABwYJBAAAAAkFAAAADwQAAAAD
-        AAAABgAAAAAAAPA/AAAAAAAAAAAAAAAAAAAAAA8FAAAAAwAAAAYAAAAAAAAAAAAAAAAAAPA/AAAAAAAA
-        AAAL
-</value>
-  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="cmGraph.TrayLocation" type="System.Drawing.Point, System.Drawing">
+    <value>17, 17</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAQAgIAAAAEAIAAoCAEARgAAADAwAAABACAAqCUAAG4IAQAgIAAAAQAgAKgQAAAWLgEAEBAAAAEA
